[tool.poetry]
name = "stock_notification"
version = "0.2.0"
description = "A Telegram bot for monitoring stock prices of major tech companies"
authors = ["Plamen Ivanov <paco.iwanow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.6"
yfinance = "^0.2.31"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
