[tool.poetry]
name = "stock_notification"
version = "0.3.0"
description = "A Telegram bot for monitoring stock prices of major tech companies"
authors = ["Plamen Ivanov <paco.iwanow@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/k1lgor/stock-price-telegram-bot"
keywords = [
  "telegram-bot",
  "stock-market",
  "finance",
  "notifications",
  "monitoring",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
  "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.6"
yfinance = "^0.2.31"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
